Adds the controller Finances and cleans help
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1689 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -23,21 +23,6 @@ eng:
       bank_statement_update: 'Edit bank statement %{number}'
       bank_statements: 'Bank statements'
       #>bank_statements_kame: 'Bank statements kame'
-      cash: '%{nature_label}: %{name}'
-      #>cash_bank_statements_kame: 'Cash bank statements kame'
-      cash_create: 'Add a new cash'
-      #>cash_delete: 'Cash delete'
-      #>cash_deposits_kame: 'Cash deposits kame'
-      cash_transfer: 'Cash transfer: %{number}'
-      cash_transfer_create: 'Add a new cash transfer'
-      #>cash_transfer_delete: 'Cash transfer delete'
-      cash_transfer_update: 'Edit cash transfer: %{number}'
-      cash_transfers: 'Cash transfers'
-      #>cash_transfers_kame: 'Cash transfers kame'
-      cash_update: 'Edit cash: %{name}'
-      cashes: 'Cashes'
-      #>cashes_kame: 'Cashes kame'
-      #>collected_account_dyli: 'Collected account dyli'
       document_print: 'Prints, exportations'
       draft_entry_lines: 'Draft'
       #>draft_entry_lines_kame: 'Draft entry lines kame'
@@ -70,20 +55,6 @@ eng:
       journals: 'Journals'
       #>journals_kame: 'Journals kame'
       lettering: 'Accounts lettering'
-      #>paid_account_dyli: 'Paid account dyli'
-      synthesis: 'Annual Documents for %{value}' #!
-      tax_create: 'Add a new tax'
-      tax_declaration: '%{nature} for period from %{started_on} to %{stopped_on}'
-      tax_declaration_create: 'Create a Tax report'
-      #>tax_declaration_delete: 'Tax declaration delete'
-      #>tax_declaration_period_search: 'Tax declaration period search'
-      tax_declaration_update: 'Create a Tax Declaration'
-      tax_declarations: 'VAT Declaration'
-      #>tax_declarations_kame: 'Tax declarations kame'
-      #>tax_delete: 'Tax delete'
-      tax_update: 'Edit tax: %{name}'
-      taxes: 'Taxes'
-      #>taxes_kame: 'Taxes kame'
       #>unlettered_journal_entry_lines_kame: 'Unlettered journal entry lines kame'
     application:
       #>i18nize: 'I18nize'
@@ -162,26 +133,23 @@ eng:
       users: 'Users'
       #>users_kame: 'Users kame'
       welcome: 'Welcome in Ekylibre, %{user}'
-    help:
-      #>close: 'Close'
-      #>previous: 'Previous'
-      #>search: 'Search'
-      #>side: 'Side'
-    management:
+    finances:
       #>account_dyli: 'Account dyli'
-      #>all_contacts_dyli: 'All contacts dyli'
-      #>available_prices_dyli: 'Available prices dyli'
-      #>change_quantities: 'Change quantities'
-      #>client_contacts_dyli: 'Client contacts dyli'
-      #>clients_dyli: 'Clients dyli'
-      #>credit_lines_kame: 'Credit lines kame'
-      #>critic_stocks_kame: 'Critic stocks kame'
-      delay: 'Delay: %{name}'
-      delay_create: 'Add a new delay'
-      #>delay_delete: 'Delay delete'
-      delay_update: 'Edit the delay: %{name}'
-      delays: 'Delays'
-      #>delays_kame: 'Delays kame'
+      cash: '%{nature_label}: %{name}'
+      #>cash_bank_statements_kame: 'Cash bank statements kame'
+      cash_create: 'Add a new cash'
+      #>cash_delete: 'Cash delete'
+      #>cash_deposits_kame: 'Cash deposits kame'
+      cash_transfer: 'Cash transfer: %{number}'
+      cash_transfer_create: 'Add a new cash transfer'
+      #>cash_transfer_delete: 'Cash transfer delete'
+      cash_transfer_update: 'Edit cash transfer: %{number}'
+      cash_transfers: 'Cash transfers'
+      #>cash_transfers_kame: 'Cash transfers kame'
+      cash_update: 'Edit cash: %{name}'
+      cashes: 'Cashes'
+      #>cashes_kame: 'Cashes kame'
+      #>collected_account_dyli: 'Collected account dyli'
       deposit: 'Deposit %{number} on %{created_on}'
       deposit_create: 'Add a new deposit: %{mode}'
       #>deposit_delete: 'Deposit delete'
@@ -190,16 +158,6 @@ eng:
       #>depositable_payments_kame: 'Depositable payments kame'
       deposits: 'Deposits'
       #>deposits_kame: 'Deposits kame'
-      #>entities_dyli: 'Entities dyli'
-      #>incoming_delivery_contacts_dyli: 'Incoming delivery contacts dyli'
-      incoming_delivery_create: 'Add a new incoming delivery'
-      #>incoming_delivery_delete: 'Incoming delivery delete'
-      incoming_delivery_mode_create: 'Add a new incoming delivery mode'
-      #>incoming_delivery_mode_delete: 'Incoming delivery mode delete'
-      incoming_delivery_mode_update: 'Edit the incoming delivery mode: %{name}'
-      incoming_delivery_modes: 'Incoming delivery modes'
-      #>incoming_delivery_modes_kame: 'Incoming delivery modes kame'
-      incoming_delivery_update: 'Edit the incoming delivery'
       incoming_payment: 'Incoming payment %{number} de %{entity}'
       incoming_payment_create: 'Add a new incoming payment'
       #>incoming_payment_delete: 'Incoming payment delete'
@@ -217,6 +175,67 @@ eng:
       #>incoming_payment_use_delete: 'Incoming payment use delete'
       incoming_payments: 'Incoming payments'
       #>incoming_payments_kame: 'Incoming payments kame'
+      index: 'Finances and transactions'
+      outgoing_payment: 'Disbursement %{number} for %{payee}'
+      outgoing_payment_create: 'Add a new disbursement'
+      #>outgoing_payment_delete: 'Outgoing payment delete'
+      outgoing_payment_mode_create: 'Add a new disbursement mode'
+      #>outgoing_payment_mode_delete: 'Outgoing payment mode delete'
+      #>outgoing_payment_mode_down: 'Outgoing payment mode down'
+      #>outgoing_payment_mode_up: 'Outgoing payment mode up'
+      outgoing_payment_mode_update: 'Edit the disbursement mode'
+      outgoing_payment_modes: 'Disbursement modes'
+      #>outgoing_payment_modes_kame: 'Outgoing payment modes kame'
+      #>outgoing_payment_purchase_orders_kame: 'Outgoing payment purchase orders kame'
+      outgoing_payment_update: 'Edit the disbursement: %{number}'
+      outgoing_payment_use_create: 'Pay the purchase order %{number}'
+      #>outgoing_payment_use_delete: 'Outgoing payment use delete'
+      outgoing_payments: 'Disbursements'
+      #>outgoing_payments_kame: 'Outgoing payments kame'
+      #>paid_account_dyli: 'Paid account dyli'
+      tax_create: 'Add a new tax'
+      tax_declaration: '%{nature} for period from %{started_on} to %{stopped_on}'
+      tax_declaration_create: 'Create a Tax report'
+      #>tax_declaration_delete: 'Tax declaration delete'
+      #>tax_declaration_period_search: 'Tax declaration period search'
+      tax_declaration_update: 'Create a Tax Declaration'
+      tax_declarations: 'VAT Declaration'
+      #>tax_declarations_kame: 'Tax declarations kame'
+      #>tax_delete: 'Tax delete'
+      tax_update: 'Edit tax: %{name}'
+      taxes: 'Taxes'
+      #>taxes_kame: 'Taxes kame'
+      unvalidated_deposits: 'Waiting deposits'
+      #>unvalidated_deposits_kame: 'Unvalidated deposits kame'
+    help:
+      #>close: 'Close'
+      #>previous: 'Previous'
+      #>search: 'Search'
+      #>side: 'Side'
+    management:
+      #>all_contacts_dyli: 'All contacts dyli'
+      #>available_prices_dyli: 'Available prices dyli'
+      #>change_quantities: 'Change quantities'
+      #>client_contacts_dyli: 'Client contacts dyli'
+      #>clients_dyli: 'Clients dyli'
+      #>credit_lines_kame: 'Credit lines kame'
+      #>critic_stocks_kame: 'Critic stocks kame'
+      delay: 'Delay: %{name}'
+      delay_create: 'Add a new delay'
+      #>delay_delete: 'Delay delete'
+      delay_update: 'Edit the delay: %{name}'
+      delays: 'Delays'
+      #>delays_kame: 'Delays kame'
+      #>entities_dyli: 'Entities dyli'
+      #>incoming_delivery_contacts_dyli: 'Incoming delivery contacts dyli'
+      incoming_delivery_create: 'Add a new incoming delivery'
+      #>incoming_delivery_delete: 'Incoming delivery delete'
+      incoming_delivery_mode_create: 'Add a new incoming delivery mode'
+      #>incoming_delivery_mode_delete: 'Incoming delivery mode delete'
+      incoming_delivery_mode_update: 'Edit the incoming delivery mode: %{name}'
+      incoming_delivery_modes: 'Incoming delivery modes'
+      #>incoming_delivery_modes_kame: 'Incoming delivery modes kame'
+      incoming_delivery_update: 'Edit the incoming delivery'
       index: 'Management'
       inventories: 'Inventories'
       #>inventories_kame: 'Inventories kame'
@@ -236,22 +255,6 @@ eng:
       outgoing_delivery_modes: 'Outgoing delivery modes'
       #>outgoing_delivery_modes_kame: 'Outgoing delivery modes kame'
       outgoing_delivery_update: 'Edit the delivery'
-      outgoing_payment: 'Disbursement %{number} for %{payee}'
-      outgoing_payment_create: 'Add a new disbursement'
-      #>outgoing_payment_delete: 'Outgoing payment delete'
-      outgoing_payment_mode_create: 'Add a new disbursement mode'
-      #>outgoing_payment_mode_delete: 'Outgoing payment mode delete'
-      #>outgoing_payment_mode_down: 'Outgoing payment mode down'
-      #>outgoing_payment_mode_up: 'Outgoing payment mode up'
-      outgoing_payment_mode_update: 'Edit the disbursement mode'
-      outgoing_payment_modes: 'Disbursement modes'
-      #>outgoing_payment_modes_kame: 'Outgoing payment modes kame'
-      #>outgoing_payment_purchase_orders_kame: 'Outgoing payment purchase orders kame'
-      outgoing_payment_update: 'Edit the disbursement: %{number}'
-      outgoing_payment_use_create: 'Pay the purchase order %{number}'
-      #>outgoing_payment_use_delete: 'Outgoing payment use delete'
-      outgoing_payments: 'Disbursements'
-      #>outgoing_payments_kame: 'Outgoing payments kame'
       price_create: 'Add a new price'
       #>price_delete: 'Price delete'
       #>price_find: 'Price find'
@@ -386,9 +389,6 @@ eng:
       unexecuted_transfers: 'Waiting stock transfers'
       #>unexecuted_transfers_kame: 'Unexecuted transfers kame'
       #>unpaid_sales_orders_export: 'Unpaid sales orders export'
-      unreceived_purchases: 'Waiting purchase orders' #!
-      unvalidated_deposits: 'Waiting deposits'
-      #>unvalidated_deposits_kame: 'Unvalidated deposits kame'
       warehouse: 'Warehouse: %{name}'
       warehouse_create: 'Add a new warehouse'
       #>warehouse_delete: 'Warehouse delete'
@@ -573,6 +573,7 @@ eng:
     application: 'Application'
     authentication: 'Authentication'
     company: 'Company'
+    finances: 'Finances'
     help: 'Help'
     management: 'Management'
     production: 'Production'
@@ -931,6 +932,7 @@ eng:
       accountize: 'Accounting transfer'
       bank_statements: 'Bank statements'
       documents: 'Documents'
+      financial_operations: 'Financial operations'
       informations: 'Informations'
       my_account: 'My account'
       parameters: 'Parameters'
