--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -14,15 +14,6 @@ fra:
       bank_statement_point: 'Pointer le relevé N°%{number}'
       bank_statement_update: 'Modifier le relevé N°%{number}'
       bank_statements: 'Relevés de compte bancaire'
-      cash: '%{nature_label} : %{name}'
-      cash_create: 'Enregistrer une nouvelle trésorerie'
-      cash_transfer: 'Virement interne : %{number}'
-      cash_transfer_create: 'Faire un nouveau virement interne'
-      cash_transfer_update: 'Modifier le virement interne : %{number}'
-      cash_transfers: 'Virements internes'
-      cash_update: 'Modifier la trésorerie : %{name}'
-      cashes: 'Trésoreries'
-      document_prepare: 'Choisissez le type de document à imprimer' #!
       document_print: 'Impression, exportation'
       draft_entry_lines: 'Brouillard'
       financial_year: 'Exercice comptable %{code}'
@@ -43,14 +34,6 @@ fra:
       journal_update: 'Modifier le journal : %{name}'
       journals: 'Journaux'
       lettering: 'Lettrage de comptes'
-      synthesis: 'Documents annuels pour %{value}'
-      tax_create: 'Ajouter une nouvelle taxe'
-      tax_declaration: '%{nature} pour la période du %{started_on} au %{stopped_on}'
-      tax_declaration_create: 'Créer une déclaration'
-      tax_declaration_update: 'Créer une déclaration'
-      tax_declarations: 'Déclaration de TVA'
-      tax_update: 'Modifier la taxe : %{name}'
-      taxes: 'Taxes'
     application: #!
     authentication:
       login: 'Connexion'
@@ -96,21 +79,19 @@ fra:
       user_update: 'Modifier l''utilisateur : %{first_name} %{last_name} (%{name})'
       users: 'Utilisateurs'
       welcome: 'Bienvenue dans Ekylibre, %{user}'
-    help: #!
-    management:
-      delay: 'Délai : %{name}'
-      delay_create: 'Ajout d''un nouveau délai'
-      delay_update: 'Modifier le délai : %{name}'
-      delays: 'Délais'
+    finances:
+      cash: '%{nature_label} : %{name}'
+      cash_create: 'Enregistrer une nouvelle trésorerie'
+      cash_transfer: 'Virement interne : %{number}'
+      cash_transfer_create: 'Faire un nouveau virement interne'
+      cash_transfer_update: 'Modifier le virement interne : %{number}'
+      cash_transfers: 'Virements internes'
+      cash_update: 'Modifier la trésorerie : %{name}'
+      cashes: 'Trésoreries'
       deposit: 'Remise en banque %{number} du %{created_on}'
       deposit_create: 'Créer une remise : %{mode}'
       deposit_update: 'Modifier la remise en banque n°%{number} du %{created_on}'
       deposits: 'Remises en banque'
-      incoming_delivery_create: 'Enregistrer un nouveau arrivage'
-      incoming_delivery_mode_create: 'Créer un mode de réception d''arrivage'
-      incoming_delivery_mode_update: 'Modifier le mode de réception d''arrivage: %{name}'
-      incoming_delivery_modes: 'Modes de réception d''arrivage'
-      incoming_delivery_update: 'Modifier l''arrivage: %{number}'
       incoming_payment: 'Encaissement n°%{number} de %{entity}'
       incoming_payment_create: 'Ajout d''un nouvel encaissement'
       incoming_payment_mode_create: 'Ajouter un nouveau mode d''encaissement'
@@ -119,6 +100,34 @@ fra:
       incoming_payment_update: 'Modifier l''encaissement n°%{number}'
       incoming_payment_use_create: 'Ajouter un nouvel encaissement : %{type} N°%{number}'
       incoming_payments: 'Encaissements'
+      index: 'Finances'
+      outgoing_payment: 'Décaissement n°%{number} pour %{payee}'
+      outgoing_payment_create: 'Ajout d''un décaissement'
+      outgoing_payment_mode_create: 'Ajouter un mode de décaissement'
+      outgoing_payment_mode_update: 'Modifier un mode de décaissement'
+      outgoing_payment_modes: 'Modes de décaissement'
+      outgoing_payment_update: 'Modifier le décaissement : %{number}'
+      outgoing_payment_use_create: 'Payer l''achat N°%{number}'
+      outgoing_payments: 'Décaissements'
+      tax_create: 'Ajouter une nouvelle taxe'
+      tax_declaration: '%{nature} pour la période du %{started_on} au %{stopped_on}'
+      tax_declaration_create: 'Créer une déclaration'
+      tax_declaration_update: 'Créer une déclaration'
+      tax_declarations: 'Déclaration de TVA'
+      tax_update: 'Modifier la taxe : %{name}'
+      taxes: 'Taxes'
+      unvalidated_deposits: 'Remises en banque à valider'
+    help: #!
+    management:
+      delay: 'Délai : %{name}'
+      delay_create: 'Ajout d''un nouveau délai'
+      delay_update: 'Modifier le délai : %{name}'
+      delays: 'Délais'
+      incoming_delivery_create: 'Enregistrer un nouveau arrivage'
+      incoming_delivery_mode_create: 'Créer un mode de réception d''arrivage'
+      incoming_delivery_mode_update: 'Modifier le mode de réception d''arrivage: %{name}'
+      incoming_delivery_modes: 'Modes de réception d''arrivage'
+      incoming_delivery_update: 'Modifier l''arrivage: %{number}'
       index: 'Gestion commerciale'
       inventories: 'Inventaires'
       inventory_create: 'Inventaire'
@@ -128,14 +137,6 @@ fra:
       outgoing_delivery_mode_update: 'Modifier le mode de livraison : %{name}'
       outgoing_delivery_modes: 'Modes de livraison'
       outgoing_delivery_update: 'Modifier la livraison'
-      outgoing_payment: 'Décaissement n°%{number} pour %{payee}'
-      outgoing_payment_create: 'Ajout d''un décaissement'
-      outgoing_payment_mode_create: 'Ajouter un mode de décaissement'
-      outgoing_payment_mode_update: 'Modifier un mode de décaissement'
-      outgoing_payment_modes: 'Modes de décaissement'
-      outgoing_payment_update: 'Modifier le décaissement : %{number}'
-      outgoing_payment_use_create: 'Payer l''achat N°%{number}'
-      outgoing_payments: 'Décaissements'
       price_create: 'Ajout d''un nouveau prix'
       price_update: 'Modifie le prix %{amount}/%{amount_with_taxes} sur %{product}'
       prices: 'Prix'
@@ -159,10 +160,8 @@ fra:
       purchase_order_invoice: 'Réception de la facture'
       purchase_order_line_create: 'Ajouter un produit à la commande : %{number}'
       purchase_order_line_update: 'Modifier une ligne de la commande'
-      purchase_order_lines: 'Produits de l''achat %{number} au fournisseur %{supplier}' #!
       purchase_order_propose: 'Commande soumise au fournisseur'
       purchase_order_refuse: 'Commande refusée'
-      purchase_order_summary: 'Décaissements de l''achat N°%{number}' #!
       purchase_order_update: 'Modifier l''achat : %{number}'
       purchase_orders: 'Achats'
       sales_invoice: '%{nature} %{number}'
@@ -173,18 +172,15 @@ fra:
       sales_order_confirm: 'Passer le devis en commande et aller aux livraisons'
       sales_order_correct: 'Corriger le devis'
       sales_order_create: 'Nouvelle vente'
-      sales_order_deliveries: 'Livraisons' #!
       sales_order_finish: 'Finir la vente'
       sales_order_invoice: 'Facturer directement tout le devis'
       sales_order_line_create: 'Ajout d''une ligne de produit'
       sales_order_line_update: 'Modifier une ligne de produit'
-      sales_order_lines: 'Sélection des produits pour le devis %{sales_order} de : %{client}' #!
       sales_order_nature_create: 'Ajout d''un type de vente'
       sales_order_nature_update: 'Modifier le type de vente : %{name}'
       sales_order_natures: 'Types de ventes'
       sales_order_propose: 'Devis soumis au client'
       sales_order_refuse: 'Devis refusé par le client'
-      sales_order_summary: 'Facture et encaissement(s) de la vente %{number}' #!
       sales_order_update: 'Modifier la vente N°%{number}'
       sales_orders: 'Devis et commandes'
       statistics: 'Statistiques'
@@ -208,8 +204,6 @@ fra:
       transports: 'Transports'
       undelivered_sales: 'Livraisons en attente'
       unexecuted_transfers: 'Transferts à réaliser'
-      unreceived_purchases: 'Achats en attente de réception'
-      unvalidated_deposits: 'Remises en banque à valider'
       warehouse: 'Détail du lieu de stockage : %{name}'
       warehouse_create: 'Ajout d''un lieu de stockage'
       warehouse_update: 'Modifier l''un lieu de stockage'
@@ -302,6 +296,7 @@ fra:
     application: 'Application'
     authentication: 'Authentification'
     company: 'Société'
+    finances: 'Finances'
     help: 'Aide'
     management: 'Commerce'
     production: 'Production'
@@ -659,6 +654,7 @@ fra:
       accountize: 'Bascule comptable'
       bank_statements: 'Relevés de compte'
       documents: 'Documents'
+      financial_operations: 'Opérations financières'
       informations: 'Informations'
       my_account: 'Mon compte'
       parameters: 'Paramètres'
