--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -14,15 +14,6 @@ spa:
       bank_statement_point: 'Despuntar el leventar N°%{number} du %{contado}'
       bank_statement_update: 'Modificar el leventar N°%{number}'
       bank_statements: 'Levantar de cuntos bancarios'
-      cash: '%{nature_label} : %{name}'
-      cash_create: 'Registrar una nueva tresoreria'
-      #>cash_transfer: 'Cash transfer: %{number}'
-      #>cash_transfer_create: 'Add a new cash transfer'
-      #>cash_transfer_update: 'Edit cash transfer: %{number}'
-      #>cash_transfers: 'Cash transfers'
-      cash_update: 'Modificar la tresoreria : %{name}'
-      cashes: 'Tresorerias'
-      document_prepare: 'Escoger el tipo de documento a imprimir' #!
       document_print: 'Impresion, exportacion'
       draft_entry_lines: 'Niebla'
       financial_year: 'Exercicio contable %{code}'
@@ -35,25 +26,14 @@ spa:
       journal: 'Periodico : %{name} (%{code})'
       journal_close: 'Cierre del %{name}'
       journal_create: 'Crear un nuevo periodico'
-      #>journal_entry: 'Journal entry: %{number}'
-      journal_entry_create: 'Añadir nueva escritura'
+      journal_entry: 'Pieza contable N°%{number} del %{fecha de creacion}'
+      journal_entry_create: 'Añadir una pieza'
       #>journal_entry_line_create: 'Add a new entry line'
-      #>journal_entry_update: 'Edit journal entry: %{number}'
-      journal_record: 'Pieza contable N°%{number} del %{fecha de creacion}' #!
-      journal_record_create: 'Añadir una pieza' #!
-      journal_record_update: 'Modificar la pieza N°%{numro} du %{fecha de creacion}' #!
+      journal_entry_update: 'Modificar la pieza N°%{numro} du %{fecha de creacion}'
       journal_reopen: 'Déclôture du %{name}'
       journal_update: 'Modicicar el periodico : %{name}'
       journals: 'Periodicos'
       lettering: 'Marcar con letra los cuentos'
-      synthesis: 'Documentos anuales para %{value}'
-      tax_create: 'Añadir nueva tarifa'
-      tax_declaration: '%{nature} para el periodo %{fecha de empezo} al %{fecha de termino}'
-      tax_declaration_create: 'Crear una declaracion'
-      tax_declaration_update: 'Crear una declaracion'
-      tax_declarations: 'Declaracion de TVA'
-      tax_update: 'Modificar la tasa : %{name}'
-      taxes: 'Tasas'
     application: #!
     authentication:
       login: 'Conexión'
@@ -100,21 +80,19 @@ spa:
       user_update: 'Modificction del utilizador'
       users: 'Utilizador'
       welcome: 'Bienvenido sobre Ekylibre, %{user}'
-    help: #!
-    management:
-      delay: 'plazo : %{name}'
-      delay_create: 'Añadir un plazo'
-      delay_update: 'Modificacion del plazo : %{name}'
-      delays: 'plazos'
+    finances:
+      cash: '%{nature_label} : %{name}'
+      cash_create: 'Registrar una nueva tresoreria'
+      #>cash_transfer: 'Cash transfer: %{number}'
+      #>cash_transfer_create: 'Add a new cash transfer'
+      #>cash_transfer_update: 'Edit cash transfer: %{number}'
+      #>cash_transfers: 'Cash transfers'
+      cash_update: 'Modificar la tresoreria : %{name}'
+      cashes: 'Tresorerias'
       deposit: 'Aposto en banco %{number} del %{created_on}'
       deposit_create: 'Crear un aposto : %{mode}'
       deposit_update: 'Modificacion del aposto en banco del %{created_on}'
       deposits: 'Aposto en banco'
-      #>incoming_delivery_create: 'Add a new incoming delivery'
-      #>incoming_delivery_mode_create: 'Add a new incoming delivery mode'
-      #>incoming_delivery_mode_update: 'Edit the incoming delivery mode: %{name}'
-      #>incoming_delivery_modes: 'Incoming delivery modes'
-      #>incoming_delivery_update: 'Edit the incoming delivery'
       #>incoming_payment: 'Incoming payment %{number} de %{entity}'
       #>incoming_payment_create: 'Add a new incoming payment'
       #>incoming_payment_mode_create: 'Add a new incoming payment mode'
@@ -123,6 +101,34 @@ spa:
       #>incoming_payment_update: 'Edit the incoming payment %{number}'
       #>incoming_payment_use_create: 'Add a new incoming payment: %{type} N°%{number}'
       #>incoming_payments: 'Incoming payments'
+      #>index: 'Finances and transactions'
+      #>outgoing_payment: 'Disbursement %{number} for %{payee}'
+      #>outgoing_payment_create: 'Add a new disbursement'
+      #>outgoing_payment_mode_create: 'Add a new disbursement mode'
+      #>outgoing_payment_mode_update: 'Edit the disbursement mode'
+      #>outgoing_payment_modes: 'Disbursement modes'
+      #>outgoing_payment_update: 'Edit the disbursement: %{number}'
+      #>outgoing_payment_use_create: 'Pay the purchase order %{number}'
+      #>outgoing_payments: 'Disbursements'
+      tax_create: 'Añadir nueva tarifa'
+      tax_declaration: '%{nature} para el periodo %{fecha de empezo} al %{fecha de termino}'
+      tax_declaration_create: 'Crear una declaracion'
+      tax_declaration_update: 'Crear una declaracion'
+      tax_declarations: 'Declaracion de TVA'
+      tax_update: 'Modificar la tasa : %{name}'
+      taxes: 'Tasas'
+      #>unvalidated_deposits: 'Waiting deposits'
+    help: #!
+    management:
+      delay: 'plazo : %{name}'
+      delay_create: 'Añadir un plazo'
+      delay_update: 'Modificacion del plazo : %{name}'
+      delays: 'plazos'
+      #>incoming_delivery_create: 'Add a new incoming delivery'
+      #>incoming_delivery_mode_create: 'Add a new incoming delivery mode'
+      #>incoming_delivery_mode_update: 'Edit the incoming delivery mode: %{name}'
+      #>incoming_delivery_modes: 'Incoming delivery modes'
+      #>incoming_delivery_update: 'Edit the incoming delivery'
       index: 'Administracion commercial'
       inventories: 'Inventarios'
       inventory_create: 'Inventario'
@@ -132,14 +138,6 @@ spa:
       outgoing_delivery_mode_update: 'Modificacion del modo de entrega : %{name}'
       outgoing_delivery_modes: 'Modos de entrega'
       outgoing_delivery_update: 'Modificacion de la entrega'
-      #>outgoing_payment: 'Disbursement %{number} for %{payee}'
-      #>outgoing_payment_create: 'Add a new disbursement'
-      #>outgoing_payment_mode_create: 'Add a new disbursement mode'
-      #>outgoing_payment_mode_update: 'Edit the disbursement mode'
-      #>outgoing_payment_modes: 'Disbursement modes'
-      #>outgoing_payment_update: 'Edit the disbursement: %{number}'
-      #>outgoing_payment_use_create: 'Pay the purchase order %{number}'
-      #>outgoing_payments: 'Disbursements'
       #>price_create: 'Add a new price'
       #>price_update: 'Edit price %{amount}/%{amount_with_taxes} of %{product}'
       #>prices: 'Prices'
@@ -207,8 +205,6 @@ spa:
       #>transports: 'Transports'
       #>undelivered_sales: 'Waiting deliveries'
       #>unexecuted_transfers: 'Waiting stock transfers'
-      #>unreceived_purchases: 'Waiting purchase orders'
-      #>unvalidated_deposits: 'Waiting deposits'
       warehouse: 'Detaile del lugar de deposito : %{name}'
       warehouse_create: 'Añadir un lugar de deposito'
       warehouse_update: 'Modificacion de un lugar de deposito'
@@ -300,6 +296,7 @@ spa:
     application: 'Aplicación'
     authentication: 'Autenticación'
     company: 'Compañía'
+    finances: 'Finanzas'
     help: 'Ayuda'
     management: 'Administración comercial'
     production: 'Producción'
@@ -672,6 +669,7 @@ spa:
       #>accountize: 'Accounting transfer'
       #>bank_statements: 'Bank statements'
       #>documents: 'Documents'
+      #>financial_operations: 'Financial operations'
       #>informations: 'Informations'
       #>my_account: 'My account'
       #>parameters: 'Parameters'
