--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -14,15 +14,6 @@ arb:
       bank_statement_point: 'رقم اعداد البيان{{number}} من {{cash}}'
       bank_statement_update: 'تعديل الكشف المصرفي رقم{{number}}'
       bank_statements: 'بيان الحساب المصرفي'
-      cash: '{{nature_label}} : {{name}}'
-      cash_create: 'التسجيل لخزينة جديدة'
-      #>cash_transfer: 'Cash transfer: %{number}'
-      #>cash_transfer_create: 'Add a new cash transfer'
-      #>cash_transfer_update: 'Edit cash transfer: %{number}'
-      #>cash_transfers: 'Cash transfers'
-      cash_update: 'تعديل الخزينة : {{name}}'
-      cashes: 'الخزينة'
-      document_prepare: 'اختيار نوع الوثيقةوطبعها' #!
       document_print: 'طباعة وتصدير'
       draft_entry_lines: 'المسودات'
       financial_year: 'ممارسة المحاسبة {{code}}'
@@ -35,25 +26,14 @@ arb:
       journal: 'الدفتر اليومي : {{name}} ({{code}})'
       journal_close: 'اغلاق {{name}}'
       journal_create: 'انشاء دفتر يومي جديد'
-      #>journal_entry: 'Journal entry: %{number}'
+      journal_entry: 'رقم سجل المحاسبة{{number}} من {{created_on}}'
       journal_entry_create: 'اضافة سجل'
       #>journal_entry_line_create: 'Add a new entry line'
-      #>journal_entry_update: 'Edit journal entry: %{number}'
-      journal_record: 'رقم سجل المحاسبة{{number}} من {{created_on}}' #!
-      journal_record_create: 'اضافة سجل' #!
-      journal_record_update: 'تعديل السجل رقم {{number}} من {{created_on}}' #!
+      journal_entry_update: 'تعديل السجل رقم {{number}} من {{created_on}}'
       journal_reopen: 'فتح {{name}}'
       journal_update: 'تعديل الدفتر اليومي : {{name}}'
       journals: 'الدفاتر اليومية'
       lettering: 'كتابة حسابات'
-      synthesis: 'وثائق سنوية ل {{value}}'
-      tax_create: 'اضافة ضريبة جديدة'
-      tax_declaration: '{{nature}} للمدة الزمنية من {{started_on}} الى {{stopped_on}}'
-      tax_declaration_create: 'Créer une déclaration'
-      tax_declaration_update: 'انشاء تصريح'
-      tax_declarations: 'تصريح عن قيمة الضريبة الاضافية'
-      tax_update: 'تعديل الضريبة : {{name}}'
-      taxes: 'الضرائب'
     application: #!
     authentication:
       login: 'الدخول'
@@ -100,21 +80,19 @@ arb:
       user_update: 'تعديل المستخدم'
       users: 'المستخدمين'
       welcome: 'نرحب بايكيليبغ  {{user}}'
-    help: #!
-    management:
-      delay: 'المهلة : {{name}}'
-      delay_create: 'اضافة مهلة جديدة'
-      delay_update: 'تعديل المهلة : {{name}}'
-      delays: 'مهلة'
+    finances:
+      cash: '{{nature_label}} : {{name}}'
+      cash_create: 'التسجيل لخزينة جديدة'
+      #>cash_transfer: 'Cash transfer: %{number}'
+      #>cash_transfer_create: 'Add a new cash transfer'
+      #>cash_transfer_update: 'Edit cash transfer: %{number}'
+      #>cash_transfers: 'Cash transfers'
+      cash_update: 'تعديل الخزينة : {{name}}'
+      cashes: 'الخزينة'
       deposit: 'اقتطاع البنك {{number}} من {{created_on}}'
       deposit_create: 'انشاء اقتطاع : {{mode}}'
       deposit_update: 'تعديل اقتطاعات البنك من {{created_on}}'
       deposits: 'اقتطاعات البنك'
-      #>incoming_delivery_create: 'Add a new incoming delivery'
-      #>incoming_delivery_mode_create: 'Add a new incoming delivery mode'
-      #>incoming_delivery_mode_update: 'Edit the incoming delivery mode: %{name}'
-      #>incoming_delivery_modes: 'Incoming delivery modes'
-      #>incoming_delivery_update: 'Edit the incoming delivery'
       incoming_payment: 'دفعة رقم{{number}} من {{entity}}'
       incoming_payment_create: 'اضافة دفعة جديدة'
       incoming_payment_mode_create: 'اضافة طريقة جديدة لتسديد الفعة'
@@ -123,6 +101,34 @@ arb:
       incoming_payment_update: 'تعديل دفعة رقم{{number}}'
       incoming_payment_use_create: 'اضافة دفعة جديدة  : {{type}} رقم {{number}}'
       incoming_payments: 'الدفعات'
+      #>index: 'Finances and transactions'
+      outgoing_payment: 'رقم الدفعة{{number}} من اجل {{payee}}'
+      outgoing_payment_create: 'اضافة دفعة'
+      outgoing_payment_mode_create: 'اضافة طريقة تسديد الدفعة'
+      outgoing_payment_mode_update: 'تعديل طريقة تسديد الفعة'
+      outgoing_payment_modes: 'طرق تسديد الدفعات'
+      outgoing_payment_update: 'تعديل دفعة : {{number}}'
+      outgoing_payment_use_create: 'تسديد الشراء رقم{{number}}'
+      outgoing_payments: 'دفعات'
+      tax_create: 'اضافة ضريبة جديدة'
+      tax_declaration: '{{nature}} للمدة الزمنية من {{started_on}} الى {{stopped_on}}'
+      tax_declaration_create: 'Créer une déclaration'
+      tax_declaration_update: 'انشاء تصريح'
+      tax_declarations: 'تصريح عن قيمة الضريبة الاضافية'
+      tax_update: 'تعديل الضريبة : {{name}}'
+      taxes: 'الضرائب'
+      unvalidated_deposits: 'التأكد من اقتطاعات البنك'
+    help: #!
+    management:
+      delay: 'المهلة : {{name}}'
+      delay_create: 'اضافة مهلة جديدة'
+      delay_update: 'تعديل المهلة : {{name}}'
+      delays: 'مهلة'
+      #>incoming_delivery_create: 'Add a new incoming delivery'
+      #>incoming_delivery_mode_create: 'Add a new incoming delivery mode'
+      #>incoming_delivery_mode_update: 'Edit the incoming delivery mode: %{name}'
+      #>incoming_delivery_modes: 'Incoming delivery modes'
+      #>incoming_delivery_update: 'Edit the incoming delivery'
       index: 'ادارة الاعمال'
       inventories: 'الجرد'
       inventory_create: 'الجرد'
@@ -132,14 +138,6 @@ arb:
       outgoing_delivery_mode_update: 'تعديل وسيلة التسليم : {{name}}'
       outgoing_delivery_modes: 'وسائل التسليم'
       outgoing_delivery_update: 'تعديل التسليم'
-      outgoing_payment: 'رقم الدفعة{{number}} من اجل {{payee}}'
-      outgoing_payment_create: 'اضافة دفعة'
-      outgoing_payment_mode_create: 'اضافة طريقة تسديد الدفعة'
-      outgoing_payment_mode_update: 'تعديل طريقة تسديد الفعة'
-      outgoing_payment_modes: 'طرق تسديد الدفعات'
-      outgoing_payment_update: 'تعديل دفعة : {{number}}'
-      outgoing_payment_use_create: 'تسديد الشراء رقم{{number}}'
-      outgoing_payments: 'دفعات'
       price_create: 'اضافة سعر جديد'
       #>price_update: 'Edit price %{amount}/%{amount_with_taxes} of %{product}'
       prices: 'الاسعار'
@@ -163,10 +161,8 @@ arb:
       #>purchase_order_invoice: 'Receive invoice'
       purchase_order_line_create: 'اضافة طلب للمنتج : {{number}}'
       purchase_order_line_update: 'تعديل تصميم الطلب'
-      purchase_order_lines: 'منتجات الشراء {{number}} للممول {{supplier}}' #!
       #>purchase_order_propose: 'Propose order'
       #>purchase_order_refuse: 'Refused order'
-      purchase_order_summary: 'رقم دفعة الشراء{{number}}' #!
       purchase_order_update: 'تعديل الشراء : {{number}}'
       purchase_orders: 'المستريات'
       sales_invoice: '{{nature}} {{number}}'
@@ -177,11 +173,9 @@ arb:
       sales_order_confirm: 'المضي بطلب تحديد السعر والاتجاه الى التسليم'
       #>sales_order_correct: 'Correct estimate'
       sales_order_create: 'بيع جديد'
-      sales_order_deliveries: 'التسليم' #!
       #>sales_order_finish: 'Finish sale'
       sales_order_invoice: 'فوترة طلب البيع'
       sales_order_line_create: 'اضافة تصميم خطوط المنتج'
-      sales_order_line_informations: '' #!
       sales_order_line_update: 'تعديل مسار طلب المنتج'
       sales_order_lines: 'اختيار المنتجات للطلب {{sales_order}} من : {{client}}' #!
       sales_order_nature_create: 'اضافة نوع البيع'
@@ -200,7 +194,6 @@ arb:
       stock_transfers: 'عمليات نقل وخسارة الاسهم'
       stocks: 'وضع الاسهم'
       subscription_create: 'انشاء اشتراك جديد'
-      subscription_message: '' #!
       subscription_nature_create: 'اضافة نوع الاشتراك'
       subscription_nature_update: 'تعديل نوع الاشتراك: {{name}}'
       subscription_natures: 'انواع الاشتراك'
@@ -214,8 +207,6 @@ arb:
       transports: 'وسائل النقل'
       undelivered_sales: 'التسليم بالانتظار'
       unexecuted_transfers: 'اتمام عملية نقل'
-      unreceived_purchases: 'مشتريات بانتظار الاستلام'
-      unvalidated_deposits: 'التأكد من اقتطاعات البنك'
       warehouse: 'تفاصيل عن مواقع التخزين : {{name}}'
       warehouse_create: 'اضافة موقع للتخزين'
       warehouse_update: 'تعديل موقع التخزين'
@@ -309,6 +300,7 @@ arb:
     application: 'تطبيق'
     authentication: 'المصادقة'
     company: 'شركة'
+    #>finances: 'Finances'
     help: 'المساعدة'
     management: 'الادارة'
     production: 'المنتج'
@@ -701,6 +693,7 @@ arb:
       accountize: 'ميزان المحاسبة'
       bank_statements: 'بيانات الحساب'
       documents: 'الوثائق'
+      #>financial_operations: 'Financial operations'
       informations: 'المعلومات'
       my_account: 'حسابي'
       parameters: 'الاعدادات'
