Corrects some bugs on accountancy due to bad names. Change attributes names in Kame in order to support HTML5
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1690 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -7,8 +7,8 @@ eng:
       #>account_dyli: 'Account dyli'
       #>account_entities_kame: 'Account entities kame'
       #>account_journal_entry_lines_kame: 'Account journal entry lines kame'
-      account_letter: 'Lettering account: %{number} - %{name}'
-      #>account_unletter: 'Account unletter'
+      account_mark: 'Lettering account: %{number} - %{name}'
+      #>account_unmark: 'Account unletter'
       account_update: 'Edit account: %{number} - %{name}'
       accountize: 'Flip book'
       accounts: 'Plan of accounts'
@@ -54,7 +54,7 @@ eng:
       journal_update: 'Edit journal: %{name}'
       journals: 'Journals'
       #>journals_kame: 'Journals kame'
-      lettering: 'Accounts lettering'
+      unmarked_journal_entry_lines: 'Accounts lettering'
       #>unlettered_journal_entry_lines_kame: 'Unlettered journal entry lines kame'
     application:
       #>i18nize: 'I18nize'
@@ -597,7 +597,7 @@ eng:
     account_financial_assets: 'Financial Assets'
     account_fixed_assets: 'Fixed Assets'
     account_inventories_assets: 'Inventories Assets'
-    account_letter: 'Account lettering'
+    account_mark: 'Account lettering'
     account_name: 'Account name'
     account_number: 'Account number'
     account_others_assets: 'Others'
